--- a/package.json
+++ b/package.json
@@ -7,18 +7,29 @@
     "test": "mocha --timeout 5000 -R mocha-multi --reporter-options spec=-,json=.results.json"
   },
   "author": "flatironschool",
-  "license": "Included in Repo",
+  "license": "UNLICENSED",
   "devDependencies": {
     "babel-core": "6.26.3",
     "babel-preset-env": "1.7.0",
-    "chai": "4.1.2",
+    "chai": "^4.1.2",
     "file-system": "2.2.2",
     "jsdom": "9.2.1",
-    "mocha": "5.2.0",
+    "mocha": "^5.2.0",
     "mocha-jsdom": "~1.1.0",
     "mocha-multi": "1.0.1"
   },
   "dependencies": {
     "chai-spies": "^1.0.0"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zakiya-Abass/phase-1-context-lab.git"
+  },
+  "bugs": {
+    "url": "https://github.com/zakiya-Abass/phase-1-context-lab/issues"
+  },
+  "homepage": "https://github.com/zakiya-Abass/phase-1-context-lab#readme"
 }
